XMLExper/m12/m12_516_1_tinyxml2/comparisonS.txt
tinyxml2.cpp: In member function ‘void tinyxml2::XMLDocument::DeepCopy(tinyxml2::XMLDocument*) const’:
tinyxml2.cpp:2279:96: error: cannot dynamic_cast ‘node’ (of type ‘const class tinyxml2::XMLNode*’) to type ‘class tinyxml2::XMLElement*’ (conversion casts away constness)
 2279 |  for (const XMLNode* node = this->FirstChild(); /*PCI*/dynamic_cast<tinyxml2::XMLElement*>(node); node = node->NextSibling()) {
      |                                                                                                ^
diff: tinyxml2.S: No such file or directory
